mitad del trabajo hecho, falta que la computadora pueda ganar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>pruebas</title>
+	<title>tic tac toe</title>
 
 	<link rel="stylesheet" href="./styles.css">
 
@@ -12,45 +12,49 @@
 
 
 	<div class="wraper">
+
+		<h1>Tic tac toe</h1>
+
 		<div class="board">
 
+			<div class="fade-dot"></div>
+			
 
-			<div class="sqr" id="sqr-1">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="1">
+				<span class="defaultSpan">N</span>
 			</div>
 			
-			<div class="sqr" id="sqr-2">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="2">
+				<span class="defaultSpan">N</span>
 			</div>
 			
-			<div class="sqr" id="sqr-3">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="3">
+				<span class="defaultSpan">N</span>
 			</div>
 			
-			<div class="sqr" id="sqr-4">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="4">
+				<span class="defaultSpan">N</span>
 			</div>
 			
-			<div class="sqr" id="sqr-5">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="5">
+				<span class="defaultSpan">N</span>
 			</div>
 			
-			<div class="sqr" id="sqr-6">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="6">
+				<span class="defaultSpan">N</span>
 			</div>
 			
-			<div class="sqr" id="sqr-7">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="7">
+				<span class="defaultSpan">N</span>
 			</div>
 			
-			<div class="sqr" id="sqr-8">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="8">
+				<span class="defaultSpan">N</span>
 			</div>
 			
-			<div class="sqr" id="sqr-9">
-				<span class="defaultSpan">O</span>
+			<div class="sqr" id="9">
+				<span class="defaultSpan">N</span>
 			</div>
-
 			
 		</div>
 	</div>
